--- a/config/gearwrench/default/core.entity_view_display.node.media_page.block_title.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.block_title.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.media_page.body
     - field.field.node.media_page.field_category
     - field.field.node.media_page.field_components
+    - field.field.node.media_page.field_enable_download_link
     - field.field.node.media_page.field_link
     - field.field.node.media_page.field_media
     - field.field.node.media_page.field_media_type
@@ -93,6 +94,7 @@ content:
     region: content
 hidden:
   field_category: true
+  field_enable_download_link: true
   field_preferred_listing_image: true
   langcode: true
   search_api_excerpt: true
