--- a/config/gearwrench/default/core.entity_view_display.node.media_page.default.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.media_page.body
     - field.field.node.media_page.field_category
     - field.field.node.media_page.field_components
+    - field.field.node.media_page.field_enable_download_link
     - field.field.node.media_page.field_link
     - field.field.node.media_page.field_media
     - field.field.node.media_page.field_media_type
@@ -48,6 +49,16 @@ content:
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+    region: content
+  field_enable_download_link:
+    weight: 112
+    label: hidden
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
     region: content
   field_link:
     weight: 102
