--- a/config/gearwrench/default/core.entity_view_display.node.media_page.full.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.full.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.media_page.body
     - field.field.node.media_page.field_category
     - field.field.node.media_page.field_components
+    - field.field.node.media_page.field_enable_download_link
     - field.field.node.media_page.field_link
     - field.field.node.media_page.field_media
     - field.field.node.media_page.field_media_type
@@ -18,7 +19,6 @@ dependencies:
   module:
     - blazy
     - entity_reference_revisions
-    - link
     - text
     - user
 id: node.media_page.full
@@ -35,32 +35,20 @@ content:
     region: content
   field_category:
     type: entity_reference_label
-    weight: 4
+    weight: 3
     region: content
     label: inline
     settings:
       link: true
     third_party_settings: {  }
   field_components:
-    weight: 6
+    weight: 5
     label: hidden
     settings:
       view_mode: full
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
-    region: content
-  field_link:
-    weight: 3
-    label: hidden
-    settings:
-      trim_length: 80
-      target: _blank
-      url_only: false
-      url_plain: false
-      rel: '0'
-    third_party_settings: {  }
-    type: link
     region: content
   field_media:
     weight: 0
@@ -147,7 +135,7 @@ content:
       grid_small: 0
     third_party_settings: {  }
   field_tags:
-    weight: 5
+    weight: 4
     label: inline
     settings:
       link: true
@@ -155,6 +143,8 @@ content:
     type: entity_reference_label
     region: content
 hidden:
+  field_enable_download_link: true
+  field_link: true
   field_media_type: true
   field_published_date: true
   langcode: true
