--- a/config/gearwrench/default/core.entity_view_display.node.media_page.search_index.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.search_index.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.media_page.body
     - field.field.node.media_page.field_category
     - field.field.node.media_page.field_components
+    - field.field.node.media_page.field_enable_download_link
     - field.field.node.media_page.field_link
     - field.field.node.media_page.field_media
     - field.field.node.media_page.field_media_type
@@ -141,6 +142,7 @@ content:
 hidden:
   field_category: true
   field_components: true
+  field_enable_download_link: true
   field_media_type: true
   field_tags: true
   langcode: true
