--- a/config/gearwrench/default/core.entity_view_display.node.media_page.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.teaser.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.media_page.body
     - field.field.node.media_page.field_category
     - field.field.node.media_page.field_components
+    - field.field.node.media_page.field_enable_download_link
     - field.field.node.media_page.field_link
     - field.field.node.media_page.field_media
     - field.field.node.media_page.field_media_type
@@ -130,6 +131,7 @@ content:
 hidden:
   field_category: true
   field_components: true
+  field_enable_download_link: true
   field_link: true
   field_media_type: true
   field_published_date: true
