VYRKCATG-122: Added the missing import for the "Set?" filter.

--- a/config/gearwrench/default/migrate_plus.migration.gearwrench_product_category_pages_level_one.yml
+++ b/config/gearwrench/default/migrate_plus.migration.gearwrench_product_category_pages_level_one.yml
@@ -91,6 +91,9 @@ process:
     process:
       vocabulary_id: vid
       target_id: target_id
+  field_show_set_filter:
+    plugin: determine_set_filter_show
+    source: remote_id
 destination:
   plugin: 'entity:node'
 migration_dependencies: {  }
