added teaser media page twig, updated media pages and teaser css, updated view and image styles configs

--- a/config/gearwrench/default/core.entity_view_display.node.media_page.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.teaser.yml
@@ -14,7 +14,7 @@ dependencies:
     - field.field.node.media_page.field_preferred_listing_image
     - field.field.node.media_page.field_published_date
     - field.field.node.media_page.field_tags
-    - image.style.small
+    - image.style.search_teaser_261x256
     - node.type.media_page
   module:
     - blazy
@@ -50,12 +50,12 @@ content:
     region: content
     label: hidden
     settings:
-      image_style: small
+      image_style: search_teaser_261x256
       responsive_image_style: ''
       media_switch: ''
       thumbnail_style: ''
       ratio: ''
-      view_mode: teaser
+      view_mode: search_teaser
       image: ''
       current_view_mode: teaser
       background: false
@@ -92,12 +92,12 @@ content:
     region: content
     label: hidden
     settings:
-      image_style: small
+      image_style: search_teaser_261x256
       responsive_image_style: ''
       media_switch: ''
       thumbnail_style: ''
       ratio: ''
-      view_mode: teaser
+      view_mode: search_teaser
       current_view_mode: teaser
       background: false
       caption:
