modal video for remote video embed on media page.

--- a/composer.json
+++ b/composer.json
@@ -92,6 +92,7 @@
         "drupal/linkit": "^5.0@beta",
         "drupal/login_emailusername": "^1.1",
         "drupal/media_responsive_thumbnail": "^1.0",
+        "drupal/media_video_micromodal": "^1.0",
         "drupal/memcache": "^2.0@alpha",
         "drupal/menu_link_attributes": "^1.0",
         "drupal/menu_trail_by_path": "^1.0",
