--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -169,6 +169,13 @@ media--teaser:
     component:
       css/libraries/media/teaser.css: {}
 
+# === Media: Teaser === #
+media--modal:
+  version: 1.x
+  css:
+    component:
+      css/libraries/media/modal.css: {}
+
 
 
 # ========= Nodes ========= #
