--- a/config/gearwrench/default/core.entity_form_display.media.remote_video.default.yml
+++ b/config/gearwrench/default/core.entity_form_display.media.remote_video.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.remote_video.field_media_oembed_video
     - field.field.media.remote_video.field_media_video_embed_field
     - media.type.remote_video
   module:
@@ -22,13 +23,14 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
 hidden:
   created: true
+  field_media_oembed_video: true
   name: true
   path: true
   status: true
