--- a/config/gearwrench/default/core.entity_form_display.media.remote_video.media_library.yml
+++ b/config/gearwrench/default/core.entity_form_display.media.remote_video.media_library.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_form_mode.media.media_library
+    - field.field.media.remote_video.field_media_oembed_video
     - field.field.media.remote_video.field_media_video_embed_field
     - media.type.remote_video
   module:
@@ -30,6 +31,7 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  field_media_oembed_video: true
   name: true
   path: true
   status: true
