--- a/config/gearwrench/default/core.entity_view_display.media.remote_video.media_library.yml
+++ b/config/gearwrench/default/core.entity_view_display.media.remote_video.media_library.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.media_library
+    - field.field.media.remote_video.field_media_oembed_video
     - field.field.media.remote_video.field_media_video_embed_field
     - image.style.medium
     - media.type.remote_video
@@ -27,6 +28,7 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  field_media_oembed_video: true
   field_media_video_embed_field: true
   langcode: true
   name: true
