added missing module

--- a/config/gearwrench/default/core.extension.yml
+++ b/config/gearwrench/default/core.extension.yml
@@ -80,6 +80,7 @@ module:
   media: 0
   media_library: 0
   media_responsive_thumbnail: 0
+  media_video_micromodal: 0
   menu_link_attributes: 0
   menu_link_content: 0
   menu_ui: 0
