--- a/config/gearwrench/default/views.view.product_category.yml
+++ b/config/gearwrench/default/views.view.product_category.yml
@@ -30,7 +30,7 @@ display:
         options:
           perm: 'access content'
       cache:
-        type: tag
+        type: none
         options: {  }
       query:
         type: views_query
@@ -229,8 +229,8 @@ display:
             remember: false
             multiple: true
             remember_roles:
+              anonymous: anonymous
               authenticated: authenticated
-              anonymous: '0'
               administrator: '0'
               site_administrator: '0'
               content_editor: '0'
@@ -278,8 +278,8 @@ display:
             remember: false
             multiple: true
             remember_roles:
-              authenticated: authenticated
               anonymous: '0'
+              authenticated: '0'
               administrator: '0'
               site_administrator: '0'
               content_editor: '0'
@@ -389,8 +389,10 @@ display:
           break_phrase: true
           not: false
           plugin_id: numeric
-      display_extenders: {  }
-      use_ajax: true
+      display_extenders:
+        ajax_history:
+          enable_history: false
+      use_ajax: false
       filter_groups:
         operator: AND
         groups:
@@ -414,9 +416,11 @@ display:
     display_title: 'Products by Category'
     position: 1
     display_options:
-      display_extenders: {  }
+      display_extenders:
+        ajax_history:
+          enable_history: false
       display_description: ''
-      use_ajax: true
+      use_ajax: false
       defaults:
         use_ajax: false
         filters: false
@@ -501,8 +505,8 @@ display:
             remember: false
             multiple: true
             remember_roles:
+              anonymous: anonymous
               authenticated: authenticated
-              anonymous: '0'
               administrator: '0'
               site_administrator: '0'
               content_editor: '0'
@@ -550,8 +554,8 @@ display:
             remember: false
             multiple: true
             remember_roles:
+              anonymous: anonymous
               authenticated: authenticated
-              anonymous: '0'
               administrator: '0'
               site_administrator: '0'
               content_editor: '0'
