added favicons, updated gulp file and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ node_modules
 /docroot/themes/custom/*/fonts/icons
 /docroot/themes/custom/*/icons/
 /docroot/themes/custom/*/images/
+/docroot/themes/custom/*/favicons/
 /docroot/themes/custom/*/js/
 /source/themes/custom/*/styles/vendor/_icons.scss
 
