Added preferred listing image to preprocess, CT & GW changed gap to column and row gap for full--product-slider, added media page type to search-index.scss, removed cta and published date from  media page search index display, changed acquia search media page view mode

--- a/config/gearwrench/default/views.view.acquia_search.yml
+++ b/config/gearwrench/default/views.view.acquia_search.yml
@@ -86,6 +86,7 @@ display:
           view_modes:
             'entity:node':
               landing_page: search_index
+              media_page: search_index
               page: search_index
       fields:
         title:
