--- a/config/gearwrench/default/core.entity_view_display.node.media_page.search_index.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.search_index.yml
@@ -18,8 +18,6 @@ dependencies:
     - node.type.media_page
   module:
     - blazy
-    - datetime
-    - link
     - text
     - user
 id: node.media_page.search_index
@@ -30,21 +28,9 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 3
+    weight: 2
     settings: {  }
     third_party_settings: {  }
-    region: content
-  field_link:
-    weight: 4
-    label: hidden
-    settings:
-      trim_length: 80
-      url_only: false
-      url_plain: false
-      rel: ''
-      target: ''
-    third_party_settings: {  }
-    type: link
     region: content
   field_media:
     weight: 0
@@ -130,20 +116,13 @@ content:
       grid_medium: 0
       grid_small: 0
     third_party_settings: {  }
-  field_published_date:
-    weight: 2
-    label: inline
-    settings:
-      format_type: medium
-      timezone_override: ''
-    third_party_settings: {  }
-    type: datetime_default
-    region: content
 hidden:
   field_category: true
   field_components: true
   field_enable_download_link: true
+  field_link: true
   field_media_type: true
+  field_published_date: true
   field_tags: true
   langcode: true
   links: true
