--- a/config/gearwrench/default/core.entity_view_display.node.social_post.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.social_post.teaser.yml
@@ -9,7 +9,7 @@ dependencies:
     - field.field.node.social_post.field_post_url
     - node.type.social_post
   module:
-    - text
+    - smart_trim
     - user
 id: node.social_post.teaser
 targetEntityType: node
@@ -18,10 +18,21 @@ mode: teaser
 content:
   body:
     label: hidden
-    type: text_summary_or_trimmed
+    type: smart_trim
     weight: 1
     settings:
-      trim_length: 600
+      trim_length: 190
+      trim_type: chars
+      trim_suffix: ''
+      wrap_class: trimmed
+      more_text: More
+      more_class: more-link
+      summary_handler: full
+      wrap_output: false
+      more_link: false
+      trim_options:
+        text: false
+        trim_zero: false
     third_party_settings: {  }
     region: content
   field_media:
