updated views to not be ajax and fixed wrong thumbnail inssue on media pages.

--- a/composer.json
+++ b/composer.json
@@ -271,6 +271,9 @@
                 "https://www.drupal.org/node/3166929": "https://www.drupal.org/files/issues/2020-08-24/3166929-0.patch",
                 "https://www.drupal.org/node/3212229": "https://www.drupal.org/files/issues/2021-05-04/3212229-04.patch"
             },
+            "drupal/imageapi_optimize_webp": {
+                "https://www.drupal.org/node/3153942": "https://www.drupal.org/files/issues/2020-06-23/3153942-2.patch"
+            },
             "drupal/layout_paragraphs": {
                 "https://www.drupal.org/node/3158244": "https://www.drupal.org/files/issues/2021-05-07/configurable_modal_width_3158244-7.patch",
                 "https://www.drupal.org/node/3199508": "https://www.drupal.org/files/issues/2021-03-11/3199508-2.patch"
@@ -278,8 +281,8 @@
             "drupal/linkit": {
                 "https://www.drupal.org/node/2712951": "https://www.drupal.org/files/issues/2020-11-02/linkit-for-link-field-2712951-194.patch"
             },
-            "drupal/imageapi_optimize_webp": {
-                "https://www.drupal.org/node/3153942": "https://www.drupal.org/files/issues/2020-06-23/3153942-2.patch"
+            "drupal/media_video_micromodal": {
+                "If thumb ID matches a Media id, wrong thumbnail is used.": "patches/fid-matches-media-id-error.patch"
             },
             "drupal/migrate_plus": {
                 "https://www.drupal.org/project/migrate_plus/issues/2787157": "https://www.drupal.org/files/issues/2020-10-06/fix_xpath_error-2787157-17.patch"
