--- a/config/gearwrench/default/core.entity_view_display.node.product.search_index.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product.search_index.yml
@@ -42,14 +42,14 @@ content:
     type: blazy_media
     weight: 0
     region: content
-    label: above
+    label: hidden
     settings:
       image_style: product_small
       responsive_image_style: ''
       media_switch: ''
       thumbnail_style: ''
       ratio: ''
-      view_mode: default
+      view_mode: search_index
       image: ''
       current_view_mode: search_index
       background: false
