added product industry pages and views.

--- a/config/gearwrench/default/core.entity_view_display.node.product.default.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.product.body
     - field.field.node.product.field_featured_product
+    - field.field.node.product.field_industry
     - field.field.node.product.field_launch_date
     - field.field.node.product.field_long_description
     - field.field.node.product.field_media
@@ -30,6 +31,7 @@ content: {  }
 hidden:
   body: true
   field_featured_product: true
+  field_industry: true
   field_launch_date: true
   field_long_description: true
   field_media: true
