--- a/config/gearwrench/default/core.entity_form_display.node.product.default.yml
+++ b/config/gearwrench/default/core.entity_form_display.node.product.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.product.body
     - field.field.node.product.field_featured_product
+    - field.field.node.product.field_industry
     - field.field.node.product.field_launch_date
     - field.field.node.product.field_long_description
     - field.field.node.product.field_media
@@ -46,6 +47,7 @@ third_party_settings:
     group_main:
       children:
         - title
+        - field_industry
         - body
         - field_media
       parent_name: group_tabs
@@ -101,7 +103,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 2
+    weight: 3
     settings:
       rows: 9
       summary_rows: 3
@@ -111,19 +113,29 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 3
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   field_featured_product:
-    weight: 27
+    weight: 11
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  field_industry:
+    weight: 2
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
   field_launch_date:
-    weight: 30
+    weight: 14
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
@@ -137,7 +149,7 @@ content:
     type: string_textfield
     region: content
   field_media:
-    weight: 3
+    weight: 4
     settings:
       media_types:
         - image
@@ -147,14 +159,14 @@ content:
     type: media_library_widget
     region: content
   field_meta_tags:
-    weight: 29
+    weight: 13
     settings:
       sidebar: true
     third_party_settings: {  }
     type: metatag_firehose
     region: content
   field_new_product:
-    weight: 26
+    weight: 10
     settings:
       display_label: true
     third_party_settings: {  }
@@ -196,7 +208,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_related_products:
-    weight: 28
+    weight: 12
     settings:
       match_operator: CONTAINS
       match_limit: 10
@@ -240,14 +252,14 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 3
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 6
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -255,21 +267,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 4
+    weight: 5
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 9
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 5
+    weight: 6
     region: content
     third_party_settings: {  }
   title:
@@ -291,7 +303,7 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 7
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
