- added new JS to the instagram `view--social-feed` - wrote JS to add the slider to the instagram post layout in mobile only and destroy it when on desktop - updated the post styles to match creative

--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -569,11 +569,12 @@ view--social-feed:
     component:
       css/libraries/view/social-feed.css: {}
   js:
-    js/libraries/view/social-feed.js: {}
+    js/libraries/view/instagram-feed.js: {}
   dependencies:
     - core/drupal
     - core/jquery
     - core/jquery.once
+    - gearwrench/library--swiper
     - gearwrench/library--add-to-any
 
 # ========= Forms ========= #
