--- a/config/gearwrench/default/block.block.gearwrench_page_title.yml
+++ b/config/gearwrench/default/block.block.gearwrench_page_title.yml
@@ -26,6 +26,7 @@ visibility:
       landing_page: landing_page
       page: page
       product_category: product_category
+      product_industry: product_industry
     negate: false
     context_mapping:
       node: '@node.node_route_context:node'
