feature/VYRKCATG-273: Added the command to upload to the FTP.

--- a/composer.json
+++ b/composer.json
@@ -135,6 +135,7 @@
         "drush/drush": "^10.3",
         "facebook/graph-sdk": "^5.7",
         "furf/jquery-ui-touch-punch": "^1.0",
+        "league/flysystem-sftp": "^2.0",
         "topfloor/composer-cleanup-vcs-dirs": "^1.1",
         "vlucas/phpdotenv": "^5.3",
         "vmlyr-drupal/bazo": "^8.0",
