added config for industry permissions

--- a/config/gearwrench/default/user.role.anonymous.yml
+++ b/config/gearwrench/default/user.role.anonymous.yml
@@ -19,5 +19,6 @@ permissions:
   - 'view any page content'
   - 'view any product content'
   - 'view any product_category content'
+  - 'view any product_industry content'
   - 'view any social_post content'
   - 'view media'
