--- a/config/gearwrench/default/user.role.authenticated.yml
+++ b/config/gearwrench/default/user.role.authenticated.yml
@@ -20,3 +20,4 @@ permissions:
   - 'view any styleguide content'
   - 'view media'
   - 'view own media_page content'
+  - 'view own product_industry content'
