--- a/config/gearwrench/default/acquia_connector.settings.yml
+++ b/config/gearwrench/default/acquia_connector.settings.yml
@@ -32,7 +32,7 @@ spi:
     variables: {  }
     time: 0
   cron_interval: 28800
-  site_environment: prod
+  site_environment: null
   env_detection_enabled: true
   site_uuid: 8e6640da-9fe2-4d06-a32e-ff1c0e0df141
 mapping:
