RedirectImport: Added a redirect import module.

--- a/composer.json
+++ b/composer.json
@@ -104,6 +104,7 @@
         "drupal/node_view_permissions": "^1.5",
         "drupal/paragraphs": "^1.11",
         "drupal/paragraphs_ee": "1.x-dev@dev",
+        "drupal/path_redirect_import": "1.x-dev",
         "drupal/pathauto": "^1.6",
         "drupal/permissions_filter": "^1.0",
         "drupal/quick_node_clone": "^1.14",
