--- a/config/gearwrench/local/core.extension.yml
+++ b/config/gearwrench/local/core.extension.yml
@@ -104,6 +104,7 @@ module:
   paragraphs_component_field: 0
   path: 0
   path_alias: 0
+  path_redirect_import: 0
   permissions_filter: 0
   quick_node_clone: 0
   rdf: 0
