Purge: Pushing the purge module up.

--- a/config/gearwrench/default/config_split.config_split.remote_prod.yml
+++ b/config/gearwrench/default/config_split.config_split.remote_prod.yml
@@ -17,6 +17,9 @@ blacklist: {  }
 graylist:
   - acquia_connector.settings
   - gearwrench_core.settings
+  - purge.logger_channels
+  - purge.plugins
+  - purge_queuer_coretags.settings
 graylist_dependents: true
 graylist_skip_equal: true
 weight: 0
