--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         "cweagans/composer-patches": "^1.7",
         "dinbror/blazy": "^1.8",
         "drupal/acquia_connector": "^3.0",
+        "drupal/acquia_purge": "^1.2",
         "drupal/acquia_search": "^3.0.0",
         "drupal/address": "^1.3",
         "drupal/admin_toolbar": "^3.0",
@@ -107,6 +108,7 @@
         "drupal/path_redirect_import": "1.x-dev",
         "drupal/pathauto": "^1.6",
         "drupal/permissions_filter": "^1.0",
+        "drupal/purge": "^3.2",
         "drupal/quick_node_clone": "^1.14",
         "drupal/recaptcha": "^3.0",
         "drupal/redirect": "^1.0",
