--- a/config/gearwrench/default/core.extension.yml
+++ b/config/gearwrench/default/core.extension.yml
@@ -1,5 +1,6 @@
 module:
   acquia_connector: 0
+  acquia_purge: 0
   acquia_search: 0
   address: 0
   admin_toolbar: 0
@@ -103,6 +104,12 @@ module:
   path: 0
   path_alias: 0
   permissions_filter: 0
+  purge: 0
+  purge_drush: 0
+  purge_processor_cron: 0
+  purge_processor_lateruntime: 0
+  purge_queuer_coretags: 0
+  purge_ui: 0
   quick_node_clone: 0
   rdf: 0
   redirect: 0
