--- a/config/gearwrench/local/core.extension.yml
+++ b/config/gearwrench/local/core.extension.yml
@@ -106,6 +106,12 @@ module:
   path_alias: 0
   path_redirect_import: 0
   permissions_filter: 0
+  purge: 0
+  purge_drush: 0
+  purge_processor_cron: 0
+  purge_processor_lateruntime: 0
+  purge_queuer_coretags: 0
+  purge_ui: 0
   quick_node_clone: 0
   rdf: 0
   redirect: 0
