WarrantyEmail: Got the emails generally configured.

--- a/.docksal/etc/php/php.ini
+++ b/.docksal/etc/php/php.ini
@@ -1,8 +1,8 @@
 ; PHP settings
 [php]
 ; Maximum amount of memory a script may consume
-memory_limit = -1
-max_input_vars = 1000
+memory_limit = 4096M
+max_input_vars = 3600
 
 ; Mail settings
 sendmail_path = '/usr/local/bin/mhsendmail --smtp-addr=mail:1025'
