--- a/.docksal/etc/php/php-cli.ini
+++ b/.docksal/etc/php/php-cli.ini
@@ -1,5 +1,5 @@
 ; PHP CLI settings
 [php]
 ; Maximum amount of memory a script may consume
-memory_limit = -1
-max_input_vars = 1000
+memory_limit = 4096M
+max_input_vars = 3600
