SMTP: Cleaned up config a bit. Added Swift Mailer.

--- a/composer.json
+++ b/composer.json
@@ -109,6 +109,7 @@
         "drupal/pathauto": "^1.6",
         "drupal/permissions_filter": "^1.0",
         "drupal/purge": "^3.2",
+        "drupal/purge_purger_http": "^1.0",
         "drupal/quick_node_clone": "^1.14",
         "drupal/recaptcha": "^3.0",
         "drupal/redirect": "^1.0",
@@ -123,7 +124,7 @@
         "drupal/stage_file_proxy": "^1.0@alpha",
         "drupal/structure_sync": "^2.0",
         "drupal/svg_image": "^1.8",
-        "drupal/swiftmailer": "^2.0@beta",
+        "drupal/swiftmailer": "2.x-dev",
         "drupal/telephone_formatter": "^1.0@beta",
         "drupal/telephone_validation": "^2.1",
         "drupal/theme_filter": "^1.0",
