--- a/config/gearwrench/default/config_split.config_split.local.yml
+++ b/config/gearwrench/default/config_split.config_split.local.yml
@@ -9,9 +9,15 @@ label: Local
 description: ''
 folder: ../config/gearwrench/local
 module:
+  acquia_purge: 0
   dblog: 0
   devel: 0
+  purge: 0
+  purge_drush: 0
+  purge_tokens: 0
+  purge_ui: 0
   stage_file_proxy: 0
+  ultimate_cron: 0
   views_ui: 0
 theme: {  }
 blacklist: {  }
