--- a/config/gearwrench/local/core.extension.yml
+++ b/config/gearwrench/local/core.extension.yml
@@ -106,12 +106,6 @@ module:
   path_alias: 0
   path_redirect_import: 0
   permissions_filter: 0
-  purge: 0
-  purge_drush: 0
-  purge_processor_cron: 0
-  purge_processor_lateruntime: 0
-  purge_queuer_coretags: 0
-  purge_ui: 0
   quick_node_clone: 0
   rdf: 0
   redirect: 0
@@ -127,6 +121,7 @@ module:
   simple_sitemap: 0
   smart_trim: 0
   stage_file_proxy: 0
+  swiftmailer: 0
   system: 0
   taxonomy: 0
   telephone: 0
