MediaPages: Disabled the "In the News" option.

--- a/config/gearwrench/default/views.view.media_pages.yml
+++ b/config/gearwrench/default/views.view.media_pages.yml
@@ -213,7 +213,11 @@ display:
           group_type: group
           admin_label: ''
           operator: or
-          value: {  }
+          value:
+            Brochure: Brochure
+            Catalog: Catalog
+            'News Release': 'News Release'
+            Video: Video
           group: 1
           exposed: true
           expose:
