updated patch to fix broken media, added batch process to publish paragraphs.

--- a/docroot/modules/custom/gearwrench_core/gearwrench_core.routing.yml
+++ b/docroot/modules/custom/gearwrench_core/gearwrench_core.routing.yml
@@ -13,3 +13,12 @@ gearwrench_core.set_default_listing_image_process:
     _permission: 'access administration pages'
   options:
     _admin_route: TRUE
+gearwrench_core.publish_all_paragraphs:
+  path: '/admin/config/gearwrench-core/publish-all-paragraphs'
+  defaults:
+    _controller: '\Drupal\gearwrench_core\Controller\PublishAllParagraphs::process'
+    _title: 'Publish all Paragraphs'
+  requirements:
+    _permission: 'access administration pages'
+  options:
+    _admin_route: TRUE
