--- a/config/gearwrench/default/mailsystem.settings.yml
+++ b/config/gearwrench/default/mailsystem.settings.yml
@@ -1,7 +1,7 @@
 theme: gearwrench
 defaults:
-  sender: php_mail
-  formatter: php_mail
+  sender: swiftmailer
+  formatter: swiftmailer
 _core:
   default_config_hash: IhwTepsVwtbtbcT5GzQKhCXDCRvbk3MNkWqPiuiZ10s
 modules:
