--- a/config/gearwrench/default/swiftmailer.transport.yml
+++ b/config/gearwrench/default/swiftmailer.transport.yml
@@ -1,12 +1,12 @@
 transport: smtp
-smtp_host: SMTP.atg.root
-smtp_port: 25
-smtp_encryption: '0'
+smtp_host: smtp.office365.com
+smtp_port: 587
+smtp_encryption: tls
 smtp_credential_provider: swiftmailer
 smtp_credentials:
   swiftmailer:
-    username: ''
-    password: ''
+    username: no-reply@apextoolgroup.com
+    password: 'd=Ad1+c3=c+G:*7sO8Y'''
 sendmail_path: /usr/sbin/sendmail
 sendmail_mode: bs
 spool_directory: ''
