--- a/config/gearwrench/default/system.site.yml
+++ b/config/gearwrench/default/system.site.yml
@@ -1,6 +1,6 @@
 uuid: 9f723658-044f-403b-8949-724036e60ebe
 name: Gearwrench
-mail: noreply@gearwrench.com
+mail: no-reply@gearwrench.com
 slogan: ''
 page:
   403: /node/23676
