--- a/config/crescenttool/default/core.entity_view_display.node.product.full.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.product.full.yml
@@ -35,6 +35,15 @@ content:
     third_party_settings: {  }
     type: string
     region: content
+  field_media:
+    type: entity_reference_entity_view
+    weight: 4
+    region: content
+    label: hidden
+    settings:
+      view_mode: product_detail_slider
+      link: false
+    third_party_settings: {  }
   field_product_features:
     weight: 2
     label: hidden
@@ -64,7 +73,6 @@ hidden:
   body: true
   field_featured_product: true
   field_launch_date: true
-  field_media: true
   field_meta_tags: true
   field_new_product: true
   field_product_classifications: true
