ProdVideoDisplay: Adjust the display a bit.

--- a/config/gearwrench/default/core.entity_view_display.media.remote_video.product_detail_slider.yml
+++ b/config/gearwrench/default/core.entity_view_display.media.remote_video.product_detail_slider.yml
@@ -20,7 +20,7 @@ content:
     type: video_embed_field_video
     weight: 0
     region: content
-    label: visually_hidden
+    label: hidden
     settings:
       responsive: true
       width: 854
