--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -185,6 +185,14 @@ media--modal:
     component:
       css/libraries/media/modal.css: {}
 
+# === Media: Product Detail Slider - Remote Video === #
+media--product-detail-slider--remote-video:
+  version: 1.x
+  css:
+    component:
+      css/libraries/media/product-detail-slider__remote-video.css: {}
+
+
 
 
 # ========= Nodes ========= #
