updated gw references.

--- a/config/crescenttool/default/block.block.productbuynowsticky.yml
+++ b/config/crescenttool/default/block.block.productbuynowsticky.yml
@@ -3,10 +3,10 @@ langcode: en
 status: true
 dependencies:
   module:
-    - gearwrench_core
+    - crescenttool_core
     - node
   theme:
-    - gearwrench
+    - crescenttool
 id: productbuynowsticky
 theme: crescenttool
 region: pre_content
@@ -16,7 +16,7 @@ plugin: product_buy_now_sticky
 settings:
   id: product_buy_now_sticky
   label: 'Product: Buy Now Sticky'
-  provider: gearwrench_core
+  provider: crescenttool_core
   label_display: '0'
 visibility:
   node_type:
