--- a/config/crescenttool/default/config_split.config_split.remote_prod.yml
+++ b/config/crescenttool/default/config_split.config_split.remote_prod.yml
@@ -14,7 +14,7 @@ theme: {  }
 blacklist: {  }
 graylist:
   - acquia_connector.settings
-  - gearwrench_core.settings
+  - crescenttool_core.settings
   - purge.logger_channels
   - purge.plugins
   - purge_queuer_coretags.settings
