--- a/config/crescenttool/default/metatag.metatag_defaults.node__product_category.yml
+++ b/config/crescenttool/default/metatag.metatag_defaults.node__product_category.yml
@@ -8,6 +8,6 @@ tags:
   description: 'Shop Crescent Tools [node:product_classifications_full_string] for your next job. Get things done and find the right product for your needs here. '
   title: 'Shop [node:product_classifications_full_string] from Crescent Tools'
   og_description: 'Shop Crescent Tools [node:product_classifications_full_string] for your next job. Get things done and find the right product for your needs here. '
-  og_title: 'Shop [node:product_classifications_full_string] from Gearwrench'
+  og_title: 'Shop [node:product_classifications_full_string] from Crescent Tool'
   twitter_cards_description: 'Shop Crescent Tools[node:product_classifications_full_string] for your next job. Get things done and find the right product for your needs here. '
   twitter_cards_title: 'Shop [node:product_classifications_full_string] from Crescent Tools'
