--- a/config/crescenttool/default/responsive_image.styles.hero_basic.yml
+++ b/config/crescenttool/default/responsive_image.styles.hero_basic.yml
@@ -11,7 +11,7 @@ id: hero_basic
 label: 'Hero - Basic'
 image_style_mappings:
   -
-    breakpoint_id: gearwrench.All
+    breakpoint_id: crescenttool.All
     multiplier: 1x
     image_mapping_type: sizes
     image_mapping:
@@ -19,5 +19,5 @@ image_style_mappings:
       sizes_image_styles:
         - hero_banner
         - hero_banner_mobile
-breakpoint_group: gearwrench
+breakpoint_group: crescenttool
 fallback_image_style: hero_banner
