--- a/config/crescenttool/default/views.view.product_category_grid.yml
+++ b/config/crescenttool/default/views.view.product_category_grid.yml
@@ -243,7 +243,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      display_description: 'See gearwrench_core for programmatic filter settings for this display mode.'
+      display_description: 'See crescenttool_core for programmatic filter settings for this display mode.'
     cache_metadata:
       max-age: -1
       contexts:
