--- a/config/crescenttool/default/responsive_image.styles.short_hero.yml
+++ b/config/crescenttool/default/responsive_image.styles.short_hero.yml
@@ -15,7 +15,7 @@ id: short_hero
 label: 'Short Hero'
 image_style_mappings:
   -
-    breakpoint_id: gearwrench.All
+    breakpoint_id: crescenttool.All
     multiplier: 1x
     image_mapping_type: sizes
     image_mapping:
@@ -27,5 +27,5 @@ image_style_mappings:
         - medium_1x1
         - medium_landscape_5x4
         - small_landscape_4x3
-breakpoint_group: gearwrench
+breakpoint_group: crescenttool
 fallback_image_style: small_landscape_4x3
