--- a/config/crescenttool/local/core.extension.yml
+++ b/config/crescenttool/local/core.extension.yml
@@ -58,9 +58,9 @@ module:
   file_mdm_font: 0
   filter: 0
   focal_point: 0
-  gearwrench_core: 0
-  gearwrench_migrations: 0
-  gearwrench_product_category_filtering: 0
+  crescenttool_core: 0
+  crescenttool_migrations: 0
+  crescenttool_product_category_filtering: 0
   google_tag: 0
   help: 0
   history: 0
