--- a/config/crescenttool/local/stage_file_proxy.settings.yml
+++ b/config/crescenttool/local/stage_file_proxy.settings.yml
@@ -1,5 +1,5 @@
 origin: 'https://username:password@stg-www.crescenttool.com'
-origin_dir: sites/gearwrench/files
+origin_dir: sites/crescenttool/files
 use_imagecache_root: true
 hotlink: false
 verify: false
