--- a/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
+++ b/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
@@ -183,6 +183,19 @@ node--full--product:
     - crescenttool/library--swiper
     - crescenttool/library--jquery-roving-tabindex
 
+# === Node: Search Index === #
+node--search-index:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/search-index.css: { }
+
+node--search-index--product:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/search-index--product.css: { }
+
 # === Node: Teaser === #
 
 node--teaser--product:
@@ -416,6 +429,12 @@ region--footer-first:
 
 # ========= Views ========= #
 
+view:
+  version: 1.x
+  css:
+    component:
+      css/libraries/view/view.css: {}
+
 view--related-products:
   version: 1.x
   css:
@@ -434,6 +453,12 @@ view--product-listing-grid:
   css:
     component:
       css/libraries/view/product-listing-grid.css: {}
+
+view--search:
+  version: 1.x
+  css:
+    component:
+      css/libraries/view/search.css: {}
 
 # ========= Forms ========= #
 webform--warranty-replacement-form:
