Drupal_9.2.9: Exported config changes from the update.

--- a/config/gearwrench/default/core.entity_view_display.node.media_page.search_index.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.search_index.yml
@@ -68,9 +68,9 @@ content:
       breakpoints: {  }
       sizes: ''
       grid_header: ''
-      grid: 0
-      grid_medium: 0
-      grid_small: 0
+      grid: '0'
+      grid_medium: '0'
+      grid_small: '0'
     third_party_settings: {  }
     type: blazy_media
     region: content
@@ -112,9 +112,9 @@ content:
       breakpoints: {  }
       sizes: ''
       grid_header: ''
-      grid: 0
-      grid_medium: 0
-      grid_small: 0
+      grid: '0'
+      grid_medium: '0'
+      grid_small: '0'
     third_party_settings: {  }
 hidden:
   field_category: true
