--- a/config/gearwrench/default/core.entity_view_display.node.styleguide.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.styleguide.teaser.yml
@@ -91,10 +91,10 @@ content:
       box_caption_custom: ''
       box_style: ''
       box_media_style: ''
-      grid: 0
+      grid: '0'
       grid_header: ''
-      grid_medium: 0
-      grid_small: 0
+      grid_medium: '0'
+      grid_small: '0'
     third_party_settings: {  }
 hidden:
   field_component_hero: true
