--- a/config/gearwrench/default/core.entity_view_display.paragraph.content.full.yml
+++ b/config/gearwrench/default/core.entity_view_display.paragraph.content.full.yml
@@ -93,10 +93,10 @@ content:
       box_caption_custom: ''
       box_style: ''
       box_media_style: ''
-      grid: 0
+      grid: '0'
       grid_header: ''
-      grid_medium: 0
-      grid_small: 0
+      grid_medium: '0'
+      grid_small: '0'
       class: ''
       id: ''
       image: ''
