--- a/config/gearwrench/default/core.entity_view_display.media.image.embed_grid.yml
+++ b/config/gearwrench/default/core.entity_view_display.media.image.embed_grid.yml
@@ -63,10 +63,10 @@ content:
       box_caption_custom: ''
       box_style: ''
       box_media_style: ''
-      grid: 0
+      grid: '0'
       grid_header: ''
-      grid_medium: 0
-      grid_small: 0
+      grid_medium: '0'
+      grid_small: '0'
     third_party_settings: {  }
     type: blazy
     weight: 1
