--- a/config/gearwrench/default/core.entity_view_display.media.image.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.media.image.teaser.yml
@@ -44,9 +44,9 @@ content:
       breakpoints: {  }
       sizes: ''
       grid_header: ''
-      grid: 0
-      grid_medium: 0
-      grid_small: 0
+      grid: '0'
+      grid_medium: '0'
+      grid_small: '0'
     third_party_settings: {  }
     type: blazy
     weight: 1
