--- a/config/gearwrench/default/core.entity_view_display.node.media_page.full.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.full.yml
@@ -86,9 +86,9 @@ content:
       breakpoints: {  }
       sizes: ''
       grid_header: ''
-      grid: 0
-      grid_medium: 0
-      grid_small: 0
+      grid: '0'
+      grid_medium: '0'
+      grid_small: '0'
     third_party_settings: {  }
     type: blazy_media
     region: content
@@ -130,9 +130,9 @@ content:
       breakpoints: {  }
       sizes: ''
       grid_header: ''
-      grid: 0
-      grid_medium: 0
-      grid_small: 0
+      grid: '0'
+      grid_medium: '0'
+      grid_small: '0'
     third_party_settings: {  }
   field_tags:
     weight: 4
