--- a/config/gearwrench/default/core.entity_view_display.node.page.full.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.page.full.yml
@@ -148,9 +148,9 @@ content:
       breakpoints: {  }
       sizes: ''
       grid_header: ''
-      grid: 0
-      grid_medium: 0
-      grid_small: 0
+      grid: '0'
+      grid_medium: '0'
+      grid_small: '0'
     third_party_settings: {  }
 hidden:
   field_meta_tags: true
