--- a/config/gearwrench/default/core.entity_view_display.paragraph.content_callout.full.yml
+++ b/config/gearwrench/default/core.entity_view_display.paragraph.content_callout.full.yml
@@ -67,9 +67,9 @@ content:
       breakpoints: {  }
       sizes: ''
       grid_header: ''
-      grid: 0
-      grid_medium: 0
-      grid_small: 0
+      grid: '0'
+      grid_medium: '0'
+      grid_small: '0'
     third_party_settings: {  }
   field_title:
     type: string
