--- a/config/gearwrench/default/core.entity_view_display.paragraph.hero_slide.search_teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.paragraph.hero_slide.search_teaser.yml
@@ -58,9 +58,9 @@ content:
       breakpoints: {  }
       sizes: ''
       grid_header: ''
-      grid: 0
-      grid_medium: 0
-      grid_small: 0
+      grid: '0'
+      grid_medium: '0'
+      grid_small: '0'
     third_party_settings: {  }
     region: content
 hidden:
