--- a/config/gearwrench/default/webform.webform.contact_us.yml
+++ b/config/gearwrench/default/webform.webform.contact_us.yml
@@ -12,7 +12,98 @@ id: contact_us
 title: 'Contact Us'
 description: 'Contact form for Gearwrench.'
 category: ''
-elements: "select_type:\n  '#type': select\n  '#title': Inquiry\n  '#options':\n    'Become a Distributor': 'Become a Distributor'\n    'Product Feedback': 'Product Feedback'\n    'Product Technical Question': 'Product Technical Question'\n    'Warranty/Replacement Parts/Repair': 'Warranty/Replacement Parts/Repair'\n    'Sales Quote': 'Sales Quote'\n    'Tools Truck': 'Tools Truck'\n    'Add/Adjust Your Location Information': 'Add/Adjust Your Location Information'\n  '#required': true\n  '#required_error': Required\nbrand:\n  '#type': textfield\n  '#title': Brand\n  '#states':\n    visible:\n      ':input[name=\"select_type\"]':\n        value: 'Product Technical Question'\n  '#required': true\nproduct_model_number:\n  '#type': textfield\n  '#title': 'Product Model Number'\n  '#required': true\n  '#required_error': Required\n  '#states':\n    visible:\n      - ':input[name=\"select_type\"]':\n          value: 'Product Feedback'\n      - or\n      - ':input[name=\"select_type\"]':\n          value: 'Product Technical Question'\n      - or\n      - ':input[name=\"select_type\"]':\n          value: 'Warranty/Replacement Parts/Repair'\nbusiness_name:\n  '#type': textfield\n  '#title': 'Business Name'\n  '#required_error': Required\nfirstname:\n  '#type': webform_name\n  '#title': 'First Name'\n  '#required': true\n  '#title__access': false\n  '#first__title': 'First Name'\n  '#first__required': true\n  '#middle__access': false\n  '#last__access': false\n  '#suffix__access': false\n  '#degree__access': false\nlast_name:\n  '#type': webform_name\n  '#title': 'Last Name'\n  '#required': true\n  '#title__access': false\n  '#first__access': false\n  '#middle__access': false\n  '#last__title': 'Last Name'\n  '#last__required': true\n  '#suffix__access': false\n  '#degree__access': false\nemail_address:\n  '#type': email\n  '#title': 'Email Address'\n  '#required': true\naddress:\n  '#type': webform_address\n  '#title': Address\n  '#required': true\n  '#address__required': true\n  '#address_2__access': false\n  '#city__required': true\n  '#state_province__required': true\n  '#country__required': true\nphone_number:\n  '#type': tel\n  '#title': 'Phone Number'\nrequest_comments:\n  '#type': textarea\n  '#title': Request/Comments\n  '#required': true\nupload_an_excel_document:\n  '#type': webform_document_file\n  '#title': 'Upload an excel document'\n  '#states':\n    visible:\n      ':input[name=\"select_type\"]':\n        value: 'Add/Adjust Your Location Information'\n  '#file_extensions': xlsx\n  '#sanitize': true"
+elements: |-
+  select_type:
+    '#type': select
+    '#title': Inquiry
+    '#options':
+      'Become a Distributor': 'Become a Distributor'
+      'Product Feedback': 'Product Feedback'
+      'Product Technical Question': 'Product Technical Question'
+      'Warranty/Replacement Parts/Repair': 'Warranty/Replacement Parts/Repair'
+      'Sales Quote': 'Sales Quote'
+      'Tools Truck': 'Tools Truck'
+      'Add/Adjust Your Location Information': 'Add/Adjust Your Location Information'
+    '#required': true
+    '#required_error': Required
+  brand:
+    '#type': textfield
+    '#title': Brand
+    '#states':
+      visible:
+        ':input[name="select_type"]':
+          value: 'Product Technical Question'
+    '#required': true
+  product_model_number:
+    '#type': textfield
+    '#title': 'Product Model Number'
+    '#required': true
+    '#required_error': Required
+    '#states':
+      visible:
+        - ':input[name="select_type"]':
+            value: 'Product Feedback'
+        - or
+        - ':input[name="select_type"]':
+            value: 'Product Technical Question'
+        - or
+        - ':input[name="select_type"]':
+            value: 'Warranty/Replacement Parts/Repair'
+  business_name:
+    '#type': textfield
+    '#title': 'Business Name'
+    '#required_error': Required
+  firstname:
+    '#type': webform_name
+    '#title': 'First Name'
+    '#required': true
+    '#title__access': false
+    '#first__title': 'First Name'
+    '#first__required': true
+    '#middle__access': false
+    '#last__access': false
+    '#suffix__access': false
+    '#degree__access': false
+  last_name:
+    '#type': webform_name
+    '#title': 'Last Name'
+    '#required': true
+    '#title__access': false
+    '#first__access': false
+    '#middle__access': false
+    '#last__title': 'Last Name'
+    '#last__required': true
+    '#suffix__access': false
+    '#degree__access': false
+  email_address:
+    '#type': email
+    '#title': 'Email Address'
+    '#required': true
+  address:
+    '#type': webform_address
+    '#title': Address
+    '#required': true
+    '#address__required': true
+    '#address_2__access': false
+    '#city__required': true
+    '#state_province__required': true
+    '#country__required': true
+  phone_number:
+    '#type': tel
+    '#title': 'Phone Number'
+  request_comments:
+    '#type': textarea
+    '#title': Request/Comments
+    '#required': true
+  upload_an_excel_document:
+    '#type': webform_document_file
+    '#title': 'Upload an excel document'
+    '#states':
+      visible:
+        ':input[name="select_type"]':
+          value: 'Add/Adjust Your Location Information'
+    '#file_extensions': xlsx
+    '#sanitize': true
 css: ''
 javascript: ''
 settings:
