--- a/config/gearwrench/default/webform.webform.warranty_replacement_form.yml
+++ b/config/gearwrench/default/webform.webform.warranty_replacement_form.yml
@@ -12,7 +12,136 @@ id: warranty_replacement_form
 title: 'Warranty/Replacement Form'
 description: 'Warranty/Replacement Form for Gearwrench.'
 category: ''
-elements: "warranty_container:\n  '#type': container\n  '#attributes':\n    class:\n      - component-accordion__content\n  product_information_wrapper:\n    '#type': container\n    '#attributes':\n      class:\n        - 'component-accordion-item component-accordion-item--open'\n    warranty_product_information:\n      '#type': webform_markup\n      '#wrapper_attributes':\n        class:\n          - component-accordion-item__title\n      '#markup': 'Product Information'\n    product_information:\n      '#type': container\n      '#attributes':\n        class:\n          - 'component-accordion-item__content block-webform'\n        style: component-accordion-item__content\n      item_number:\n        '#type': entity_autocomplete\n        '#title': 'Item Number'\n        '#description': 'Can&#39;t find your item in the list above? Please contact our live support staff at 1.866.907.9716 Monday-Friday 9am-5pm ET'\n        '#required': true\n        '#target_type': node\n        '#selection_handler': views\n        '#selection_settings':\n          view:\n            view_name: product_entity_autocomplete\n            display_name: entity_reference_1\n            arguments: {  }\n      product_image:\n        '#type': webform_image_file\n        '#title': 'Send us a photo'\n        '#description': 'Attach an image of the damaged tool (please limit size to 5 MB)'\n        '#required': true\n        '#required_error': Required\n        '#file_help': help\n        '#max_filesize': '5'\n        '#sanitize': true\n      receipt_image:\n        '#type': webform_image_file\n        '#title': 'Feel free to upload a copy of your receipt'\n        '#description': 'Attach an image of the receipt (please limit file size to 5 MB)'\n        '#file_help': help\n        '#max_filesize': '5'\n        '#sanitize': true\n      message:\n        '#type': textarea\n        '#title': Message\n        '#required': true\n        '#required_error': Required\n      purchased_from:\n        '#type': textfield\n        '#title': 'Where did you purchase this item from?'\n      button_next:\n        '#type': webform_markup\n        '#wrapper_attributes':\n          class:\n            - 'form-input-file-next-button button form-submit'\n        '#markup': Next\n  personal_information_wrapper:\n    '#type': container\n    '#attributes':\n      class:\n        - 'component-accordion-item form-accordion-item-personal-information'\n    warranty_personal_information:\n      '#type': webform_markup\n      '#wrapper_attributes':\n        class:\n          - component-accordion-item__title\n      '#markup': 'Personal Information'\n    personal_information:\n      '#type': container\n      '#attributes':\n        class:\n          - 'component-accordion-item__content block-webform'\n      first_name:\n        '#type': textfield\n        '#title': 'First Name'\n        '#required': true\n        '#required_error': Required\n      last_name:\n        '#type': textfield\n        '#title': 'Last Name'\n        '#required': true\n        '#required_error': Required\n      email_address:\n        '#type': email\n        '#title': 'Email Address'\n        '#required': true\n        '#required_error': Required\n      phone_number:\n        '#type': tel\n        '#title': 'Phone Number'\n        '#required': true\n        '#required_error': Required\n      address:\n        '#type': webform_address\n        '#title': Address\n        '#required': true\n        '#address__title': 'Street Address'\n        '#address__required': true\n        '#address_2__access': false\n        '#city__title': City\n        '#city__required': true\n        '#state_province__title': State\n        '#postal_code__title': 'Zip Code'\n        '#country__access': false\n      warranty_and_privacy_policy:\n        '#type': checkbox\n        '#title': 'I agree to the GEARWRENCH Warranty and Privacy Policy'\n        '#required': true\n        '#required_error': Required\n        '#wrapper_attributes':\n          class:\n            - form-checkboxes\n      email_opt_in:\n        '#type': checkbox\n        '#title': 'Subscribe to GEARWRENCH email distribution list'\n        '#wrapper_attributes':\n          class:\n            - form-checkboxes\n      actions:\n        '#type': webform_actions\n        '#title': 'Submit button(s)'"
+elements: |-
+  warranty_container:
+    '#type': container
+    '#attributes':
+      class:
+        - component-accordion__content
+    product_information_wrapper:
+      '#type': container
+      '#attributes':
+        class:
+          - 'component-accordion-item component-accordion-item--open'
+      warranty_product_information:
+        '#type': webform_markup
+        '#wrapper_attributes':
+          class:
+            - component-accordion-item__title
+        '#markup': 'Product Information'
+      product_information:
+        '#type': container
+        '#attributes':
+          class:
+            - 'component-accordion-item__content block-webform'
+          style: component-accordion-item__content
+        item_number:
+          '#type': entity_autocomplete
+          '#title': 'Item Number'
+          '#description': 'Can&#39;t find your item in the list above? Please contact our live support staff at 1.866.907.9716 Monday-Friday 9am-5pm ET'
+          '#required': true
+          '#target_type': node
+          '#selection_handler': views
+          '#selection_settings':
+            view:
+              view_name: product_entity_autocomplete
+              display_name: entity_reference_1
+              arguments: {  }
+        product_image:
+          '#type': webform_image_file
+          '#title': 'Send us a photo'
+          '#description': 'Attach an image of the damaged tool (please limit size to 5 MB)'
+          '#required': true
+          '#required_error': Required
+          '#file_help': help
+          '#max_filesize': '5'
+          '#sanitize': true
+        receipt_image:
+          '#type': webform_image_file
+          '#title': 'Feel free to upload a copy of your receipt'
+          '#description': 'Attach an image of the receipt (please limit file size to 5 MB)'
+          '#file_help': help
+          '#max_filesize': '5'
+          '#sanitize': true
+        message:
+          '#type': textarea
+          '#title': Message
+          '#required': true
+          '#required_error': Required
+        purchased_from:
+          '#type': textfield
+          '#title': 'Where did you purchase this item from?'
+        button_next:
+          '#type': webform_markup
+          '#wrapper_attributes':
+            class:
+              - 'form-input-file-next-button button form-submit'
+          '#markup': Next
+    personal_information_wrapper:
+      '#type': container
+      '#attributes':
+        class:
+          - 'component-accordion-item form-accordion-item-personal-information'
+      warranty_personal_information:
+        '#type': webform_markup
+        '#wrapper_attributes':
+          class:
+            - component-accordion-item__title
+        '#markup': 'Personal Information'
+      personal_information:
+        '#type': container
+        '#attributes':
+          class:
+            - 'component-accordion-item__content block-webform'
+        first_name:
+          '#type': textfield
+          '#title': 'First Name'
+          '#required': true
+          '#required_error': Required
+        last_name:
+          '#type': textfield
+          '#title': 'Last Name'
+          '#required': true
+          '#required_error': Required
+        email_address:
+          '#type': email
+          '#title': 'Email Address'
+          '#required': true
+          '#required_error': Required
+        phone_number:
+          '#type': tel
+          '#title': 'Phone Number'
+          '#required': true
+          '#required_error': Required
+        address:
+          '#type': webform_address
+          '#title': Address
+          '#required': true
+          '#address__title': 'Street Address'
+          '#address__required': true
+          '#address_2__access': false
+          '#city__title': City
+          '#city__required': true
+          '#state_province__title': State
+          '#postal_code__title': 'Zip Code'
+          '#country__access': false
+        warranty_and_privacy_policy:
+          '#type': checkbox
+          '#title': 'I agree to the GEARWRENCH Warranty and Privacy Policy'
+          '#required': true
+          '#required_error': Required
+          '#wrapper_attributes':
+            class:
+              - form-checkboxes
+        email_opt_in:
+          '#type': checkbox
+          '#title': 'Subscribe to GEARWRENCH email distribution list'
+          '#wrapper_attributes':
+            class:
+              - form-checkboxes
+        actions:
+          '#type': webform_actions
+          '#title': 'Submit button(s)'
 css: ''
 javascript: ''
 settings:
