Drupal_9.2.9: Cleaning up configs a bit.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /docroot/themes/contrib/
 /docroot/profiles/contrib/
 /docroot/libraries/
+/docroot/README.md
 
 # Ignore sensitive and environment-specific information
 /docroot/sites/default/settings.php
