--- a/config/gearwrench/default/config_split.config_split.remote_stage.yml
+++ b/config/gearwrench/default/config_split.config_split.remote_stage.yml
@@ -9,6 +9,8 @@ label: 'Remote - Stage'
 description: ''
 folder: ../config/gearwrench/remote_stage
 module:
+  acquia_connector: 0
+  acquia_purge: 0
   dblog: 0
   shield: 0
   stage_file_proxy: 0
