Drupal_9.2.9: Remote Dev config cleanup.

--- a/config/gearwrench/default/config_split.config_split.remote_dev.yml
+++ b/config/gearwrench/default/config_split.config_split.remote_dev.yml
@@ -9,6 +9,7 @@ label: 'Remote - Dev'
 description: ''
 folder: ../config/gearwrench/remote_dev
 module:
+  acquia_connector: 0
   dblog: 0
   shield: 0
   stage_file_proxy: 0
