--- a/config/gearwrench/default/config_split.config_split.remote_dev.yml
+++ b/config/gearwrench/default/config_split.config_split.remote_dev.yml
@@ -14,7 +14,8 @@ module:
   shield: 0
   stage_file_proxy: 0
 theme: {  }
-blacklist: {  }
+blacklist:
+  - purge.logger_channels
 graylist: {  }
 graylist_dependents: true
 graylist_skip_equal: true
