changes to config after importing/exporting

--- a/config/crescenttool/default/core.entity_view_display.paragraph.steps.full.yml
+++ b/config/crescenttool/default/core.entity_view_display.paragraph.steps.full.yml
@@ -36,6 +36,7 @@ content:
       link_to_entity: false
     third_party_settings: {  }
 hidden:
+  field_background_color: true
   field_class_custom: true
   field_color: true
   field_html_anchor: true
