--- a/config/crescenttool/default/core.entity_view_display.paragraph.section.full.yml
+++ b/config/crescenttool/default/core.entity_view_display.paragraph.section.full.yml
@@ -55,4 +55,5 @@ hidden:
   field_class_custom: true
   field_html_anchor: true
   field_style: true
+  field_title: true
   search_api_excerpt: true
