--- a/config/crescenttool/default/core.entity_view_display.paragraph.step.preview.yml
+++ b/config/crescenttool/default/core.entity_view_display.paragraph.step.preview.yml
@@ -30,4 +30,5 @@ content:
       link_to_entity: false
     third_party_settings: {  }
 hidden:
+  field_pre_title: true
   search_api_excerpt: true
