--- a/config/crescenttool/default/core.entity_view_display.paragraph.steps.preview.yml
+++ b/config/crescenttool/default/core.entity_view_display.paragraph.steps.preview.yml
@@ -88,4 +88,5 @@ content:
       link_to_entity: false
     third_party_settings: {  }
 hidden:
+  field_background_color: true
   search_api_excerpt: true
