Drupal_9.2.9: From the latest of Jakes config for Crescent, I imported that, ran the Drupal DB updates for the latest code, then exported the config changes. This should sync the changes fully.

--- a/config/crescenttool/default/core.entity_view_display.node.styleguide.teaser.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.styleguide.teaser.yml
@@ -50,7 +50,6 @@ content:
       responsive_image_style: ''
       media_switch: ''
       ratio: ''
-      sizes: ''
       breakpoints:
         xs:
           image_style: ''
@@ -77,22 +76,30 @@ content:
       caption:
         title: '0'
         alt: '0'
-      iframe_lazy: true
       icon: ''
       layout: ''
       view_mode: ''
       cache: 0
-      optionset: default
       skin: ''
       style: ''
       box_caption: ''
       box_caption_custom: ''
       box_style: ''
       box_media_style: ''
-      grid: 0
+      grid: ''
+      grid_medium: ''
+      grid_small: ''
+      class: ''
+      id: ''
+      image: ''
+      link: ''
+      overlay: ''
+      title: ''
+      vanilla: false
+      fx: ''
+      _uri: ''
+      sizes: ''
       grid_header: ''
-      grid_medium: 0
-      grid_small: 0
     third_party_settings: {  }
 hidden:
   field_component_hero: true
