--- a/config/crescenttool/default/core.entity_view_display.paragraph.content.full.yml
+++ b/config/crescenttool/default/core.entity_view_display.paragraph.content.full.yml
@@ -54,7 +54,6 @@ content:
       responsive_image_style: ''
       media_switch: ''
       ratio: ''
-      sizes: ''
       breakpoints:
         xs:
           image_style: ''
@@ -91,10 +90,9 @@ content:
       box_caption_custom: ''
       box_style: ''
       box_media_style: ''
-      grid: 0
-      grid_header: ''
-      grid_medium: 0
-      grid_small: 0
+      grid: ''
+      grid_medium: ''
+      grid_small: ''
       class: ''
       id: ''
       image: ''
@@ -104,6 +102,8 @@ content:
       vanilla: false
       fx: ''
       _uri: ''
+      sizes: ''
+      grid_header: ''
     third_party_settings: {  }
   field_title:
     type: string
