--- a/config/crescenttool/default/core.entity_view_display.media.image.embed.yml
+++ b/config/crescenttool/default/core.entity_view_display.media.image.embed.yml
@@ -22,7 +22,6 @@ content:
       responsive_image_style: ''
       media_switch: ''
       ratio: ''
-      sizes: ''
       breakpoints:
         xs:
           image_style: ''
@@ -49,22 +48,23 @@ content:
       caption:
         title: '0'
         alt: '0'
-      iframe_lazy: true
       icon: ''
       layout: ''
       view_mode: ''
       cache: 0
-      optionset: default
       skin: ''
       style: ''
       box_caption: ''
       box_caption_custom: ''
       box_style: ''
       box_media_style: ''
-      grid: 0
+      grid: ''
+      grid_medium: ''
+      grid_small: ''
+      fx: ''
+      _uri: ''
+      sizes: ''
       grid_header: ''
-      grid_medium: 0
-      grid_small: 0
     third_party_settings: {  }
     type: blazy
     weight: 1
