--- a/config/crescenttool/default/core.entity_view_display.media.remote_video.search_index.yml
+++ b/config/crescenttool/default/core.entity_view_display.media.remote_video.search_index.yml
@@ -45,12 +45,12 @@ content:
       box_media_style: ''
       box_style: ''
       _uri: ''
+      grid: ''
+      grid_medium: ''
+      grid_small: ''
       breakpoints: {  }
       sizes: ''
       grid_header: ''
-      grid: 0
-      grid_medium: 0
-      grid_small: 0
     third_party_settings: {  }
 hidden:
   created: true
