--- a/config/crescenttool/default/core.entity_view_display.node.media_page.full.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.media_page.full.yml
@@ -83,12 +83,12 @@ content:
       box_media_style: ''
       box_style: ''
       _uri: ''
+      grid: ''
+      grid_medium: ''
+      grid_small: ''
       breakpoints: {  }
       sizes: ''
       grid_header: ''
-      grid: 0
-      grid_medium: 0
-      grid_small: 0
     third_party_settings: {  }
     type: blazy_media
     region: content
@@ -127,12 +127,12 @@ content:
       box_media_style: ''
       box_style: ''
       _uri: ''
+      grid: ''
+      grid_medium: ''
+      grid_small: ''
       breakpoints: {  }
       sizes: ''
       grid_header: ''
-      grid: 0
-      grid_medium: 0
-      grid_small: 0
     third_party_settings: {  }
   field_tags:
     weight: 4
