--- a/config/crescenttool/default/core.entity_view_display.node.media_page.search_index.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.media_page.search_index.yml
@@ -65,12 +65,12 @@ content:
       box_media_style: ''
       box_style: ''
       _uri: ''
+      grid: ''
+      grid_medium: ''
+      grid_small: ''
       breakpoints: {  }
       sizes: ''
       grid_header: ''
-      grid: 0
-      grid_medium: 0
-      grid_small: 0
     third_party_settings: {  }
     type: blazy_media
     region: content
@@ -109,12 +109,12 @@ content:
       box_media_style: ''
       box_style: ''
       _uri: ''
+      grid: ''
+      grid_medium: ''
+      grid_small: ''
       breakpoints: {  }
       sizes: ''
       grid_header: ''
-      grid: 0
-      grid_medium: 0
-      grid_small: 0
     third_party_settings: {  }
 hidden:
   field_category: true
