--- a/config/crescenttool/default/core.entity_view_display.node.media_page.teaser.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.media_page.teaser.yml
@@ -79,12 +79,12 @@ content:
       box_media_style: ''
       box_style: ''
       _uri: ''
+      grid: ''
+      grid_medium: ''
+      grid_small: ''
       breakpoints: {  }
       sizes: ''
       grid_header: ''
-      grid: 0
-      grid_medium: 0
-      grid_small: 0
     third_party_settings: {  }
   field_preferred_listing_image:
     type: blazy_media
@@ -121,12 +121,12 @@ content:
       box_media_style: ''
       box_style: ''
       _uri: ''
+      grid: ''
+      grid_medium: ''
+      grid_small: ''
       breakpoints: {  }
       sizes: ''
       grid_header: ''
-      grid: 0
-      grid_medium: 0
-      grid_small: 0
     third_party_settings: {  }
 hidden:
   field_category: true
