--- a/config/crescenttool/default/core.entity_view_display.node.page.full.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.page.full.yml
@@ -143,12 +143,12 @@ content:
       box_media_style: ''
       box_style: ''
       _uri: ''
+      grid: ''
+      grid_medium: ''
+      grid_small: ''
       breakpoints: {  }
       sizes: ''
       grid_header: ''
-      grid: 0
-      grid_medium: 0
-      grid_small: 0
     third_party_settings: {  }
 hidden:
   field_meta_tags: true
