--- a/config/crescenttool/default/views.view.media_pages.yml
+++ b/config/crescenttool/default/views.view.media_pages.yml
@@ -71,7 +71,7 @@ display:
                   is_secondary: false
                 select_all_none: false
                 select_all_none_nested: false
-                display_inline: 0
+                display_inline: false
                 options_show_only_used: false
                 options_show_only_used_filtered: false
       pager:
@@ -339,7 +339,7 @@ display:
                   is_secondary: false
                 select_all_none: false
                 select_all_none_nested: false
-                display_inline: 0
+                display_inline: false
                 options_show_only_used: false
                 options_show_only_used_filtered: false
       defaults:
