--- a/config/crescenttool/default/views.view.new_products.yml
+++ b/config/crescenttool/default/views.view.new_products.yml
@@ -73,7 +73,7 @@ display:
                   is_secondary: false
                 select_all_none: false
                 select_all_none_nested: false
-                display_inline: 0
+                display_inline: false
                 options_show_only_used: 1
                 options_show_only_used_filtered: 0
       pager:
