--- a/config/crescenttool/default/webform.webform_options.marital_status.yml
+++ b/config/crescenttool/default/webform.webform_options.marital_status.yml
@@ -9,4 +9,8 @@ id: marital_status
 label: 'Marital status'
 category: Demographic
 likert: false
-options: "Single: Single\nMarried: Married\nDivorced: Divorced\nWidowed: Widowed\n"
+options: |
+  Single: Single
+  Married: Married
+  Divorced: Divorced
+  Widowed: Widowed
